[package]
name = "factorio-web-calculator"
version = "0.2.3"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = "0.3"
wasm-bindgen = "0.2"
clap = { version = "3.1", features = ["derive"] }
image = "0.24"
once_cell = "1.10"
thiserror = "1.0"
log = "0.4"
wasm-logger = "0.2"
gloo-storage = "0.2"

[[bin]]
name = "data-process"
